[gd_scene load_steps=4 format=3 uid="uid://d1lcq6xf66gj0"]

[ext_resource type="Script" path="res://main_menù.gd" id="1_83dms"]
[ext_resource type="Texture2D" uid="uid://c3n8afmty5f3j" path="res://Assets/Background main menù.png" id="1_py338"]
[ext_resource type="AudioStream" uid="uid://cenkg0uykk51j" path="res://Sonoro/mAINmENU.mp3" id="3_rl2nv"]

[node name="Main Menù" type="Node"]
script = ExtResource("1_83dms")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_py338")
expand_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Main" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 70.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Main/CenterContainer"]
custom_minimum_size = Vector2(512, 256)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Main/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Play" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Play"

[node name="Settings" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Settings"

[node name="Quit" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[node name="Settings" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 70.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 283.0
offset_top = -124.0
offset_right = -321.0
offset_bottom = 174.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Settings/CenterContainer"]
custom_minimum_size = Vector2(512, 256)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="Settings" type="Label" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Musica" type="Button" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Musica"

[node name="Back settings" type="Button" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Back"

[node name="Musica" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CenterContainer2" type="CenterContainer" parent="CanvasLayer/Musica"]
layout_mode = 2
offset_left = 321.0
offset_top = 191.0
offset_right = 833.0
offset_bottom = 447.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Musica/CenterContainer2"]
custom_minimum_size = Vector2(512, 256)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Musica/CenterContainer2/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Musica/CenterContainer2/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Musica/CenterContainer2/PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="Musica" type="Label" parent="CanvasLayer/Musica/CenterContainer2/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Musica"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Musica menù" type="Label" parent="CanvasLayer/Musica/CenterContainer2/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Musica menù"
vertical_alignment = 1

[node name="HSlider menù" type="HSlider" parent="CanvasLayer/Musica/CenterContainer2/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/Musica menù"]
layout_mode = 0
offset_left = 168.0
offset_top = 3.0
offset_right = 480.0
offset_bottom = 19.0
min_value = -30.0
max_value = 0.0

[node name="Musica pausa" type="Label" parent="CanvasLayer/Musica/CenterContainer2/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Musica pausa"
vertical_alignment = 1

[node name="HSlider pausa" type="HSlider" parent="CanvasLayer/Musica/CenterContainer2/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/Musica pausa"]
layout_mode = 0
offset_left = 168.0
offset_top = 3.0
offset_right = 480.0
offset_bottom = 19.0
min_value = -30.0
max_value = 0.0

[node name="Musica di gioco" type="Label" parent="CanvasLayer/Musica/CenterContainer2/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Musica di gioco"
vertical_alignment = 1

[node name="HSlider gioco" type="HSlider" parent="CanvasLayer/Musica/CenterContainer2/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/Musica di gioco"]
layout_mode = 0
offset_left = 168.0
offset_top = 3.0
offset_right = 480.0
offset_bottom = 19.0
min_value = -30.0
max_value = 0.0

[node name="Back Musica" type="Button" parent="CanvasLayer/Musica/CenterContainer2/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Back"

[node name="Principale" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_rl2nv")
volume_db = -20.0
bus = &"Master menù"

[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/Musica" to="." method="_on_musica_pressed"]
[connection signal="pressed" from="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/Back settings" to="." method="_on_back_settings_pressed"]
[connection signal="value_changed" from="CanvasLayer/Musica/CenterContainer2/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/Musica menù/HSlider menù" to="." method="_on_h_slider_menù_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Musica/CenterContainer2/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/Musica pausa/HSlider pausa" to="." method="_on_h_slider_pausa_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Musica/CenterContainer2/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/Musica di gioco/HSlider gioco" to="." method="_on_h_slider_gioco_value_changed"]
[connection signal="pressed" from="CanvasLayer/Musica/CenterContainer2/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/Back Musica" to="." method="_on_back_musica_pressed"]
[connection signal="finished" from="Principale" to="CanvasLayer" method="_on_musica_main_menù_finished"]
